updated some stuff

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/beermapping:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/beermapping-cloud:latest
